# protobuf-codegen-pure-example

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/protos/: search.rs
