[package]
name = "protofbuf-codegen-pure-example"
version = "0.1.0"
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.8.0"

[build-dependencies]
protobuf-codegen-pure = "2.8.0"
